<resources>
    <string name="app_name">Jiring</string>
    <string name="home">خانه</string>
    <string name="vision">دیده‌بان</string>
    <string name="portfolio">پورتفو</string>
    <string name="search">جستجو</string>
    <string name="orders">سفارشات</string>
    <string name="profile">حساب کاربری</string>
    <string name="sign_in_report">گزارش ورود و خروج</string>
    <string name="setting">تنظیمات</string>
    <string name="support">پشتیبانی</string>
    <string name="logout">خروج از حساب</string>

    <string name="signup_username">User name (Optional)</string>
    <string name="auth_custom_input_above">Above</string>
    <string name="signup_email">Email</string>
    <string name="signin_username">Username</string>
    <string name="later">Later</string>
    <string name="create_an_account">Create an Account</string>
    <string name="signin_to_account">Signin to your Account</string>
    <string name="continue_with_apple">Continue With apple</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
</resources>